--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -1,5 +1,6 @@
 @charset "utf-8";
 @import 'normalize';
+@import 'turtle-theme-variables';
 @import 'variables';
 @import 'icon-font';
 // @import 'rtl'; // uncomment to switch to RTL format
