--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -29,8 +29,8 @@ under the License.
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title><%= current_page.data.title || "API Documentation" %></title>
-
+    <title><%= "TurtleCoin | " + (current_page.data.title || "API Documentation") %></title>
+    <%= partial "partials/favicons" %>
     <style>
       <%= Rouge::Themes::MonokaiSublime.render(:scope => '.highlight') %>
     </style>
