--- a/source/stylesheets/turtlecoin/_styles.scss
+++ b/source/stylesheets/turtlecoin/_styles.scss
@@ -9,19 +9,34 @@ aside {
 .content {
   h1 {
     border-top: 0;
+    border-bottom: 1px solid $gray-30;
     font-size: 2em;
+  }
+
+  h2 {
+    border-top: 0;
+    border-bottom: 0;
   }
 }
 
 .toc-wrapper {
+  border-right: 1px solid $gray-30;
   font-size: 0.9em;
 
   .toc-h1 {
+    font-weight: normal;
     padding-bottom: 0.5em;
     padding-top: 0.5em;
   }
 
   .toc-h2 {
     font-size: 0.9em;
+    font-weight: normal;
+    padding-bottom: 0.3em;
+    padding-top: 0.3em;
+  }
+
+  .search input {
+    border-bottom: 0;
   }
 }
