--- a/source/stylesheets/turtlecoin/_theme-variables.scss
+++ b/source/stylesheets/turtlecoin/_theme-variables.scss
@@ -4,6 +4,7 @@ $black: #000000;
 $white: #FFFFFF;
 $gray-10: #1D1D1D;
 $gray-20: #2F2F2F;
+$gray-30: #E9E9E9;
 $green-10: #40C18E;
 $green-20: #00853D;
 $red-10: #DE5F5F;
