--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -74,7 +74,7 @@ under the License.
               <ul class="toc-list-h2">
                 <% h1[:children].each do |h2| %>
                   <li>
-                    <a href="#<%= h2[:id] %>" class="toc-h2 toc-link" data-title="<%= h2[:content].to_s.parameterize %>"><%= h2[:content] %></a>
+                    <a href="#<%= h2[:id] %>" class="toc-h2 toc-link" data-title="<%= h2[:content].to_s.titleize %>"><%= h2[:content] %></a>
                   </li>
                 <% end %>
               </ul>
