--- a/source/stylesheets/turtlecoin/_theme-variables.scss
+++ b/source/stylesheets/turtlecoin/_theme-variables.scss
@@ -16,10 +16,14 @@ $purple-10: #8E7CC3;
 $nav-bg: $white;
 $examples-bg: $gray-20;
 $code-bg: $gray-10;
-$code-annotation-bg: $gray-20;
+$code-annotation-bg: darken($gray-10, 5%);
 $nav-subitem-bg: $white;
 $nav-active-bg: $green-20;
 $nav-active-parent-bg: $white;
+$lang-select-border: $green-20;
+$lang-select-bg: $gray-20;
+$lang-select-active-bg: $green-20;
+$lang-select-pressed-bg: $gray-20;
 $main-bg: $white;
 $aside-notice-bg: $green-10;
 $aside-warning-bg: $red-10;
