--- a/source/stylesheets/turtlecoin/_theme-placeholder-overrides.scss
+++ b/source/stylesheets/turtlecoin/_theme-placeholder-overrides.scss
@@ -2,7 +2,7 @@
 ////////////////////
 %default-font {
   font-family: 'Roboto', sans-serif;
-  font-size: 1em;
+  font-size: 0.95rem;
   line-height: 1.5;
 }
 
@@ -12,5 +12,5 @@
 }
 
 %code-font {
-  font-size: 0.9em;
+  font-size: 0.9rem;
 }
