--- a/source/stylesheets/turtlecoin/_theme-placeholder-overrides.scss
+++ b/source/stylesheets/turtlecoin/_theme-placeholder-overrides.scss
@@ -12,5 +12,7 @@
 }
 
 %code-font {
-  font-size: 0.9rem;
+  font-family: Menlo, Consolas, Monaco, "Lucida Console", "Console", "Liberation Mono", "Courier New", monospace, serif;
+  font-size: 0.85rem;
+  line-height: 1.5;
 }
