--- a/source/stylesheets/turtlecoin/_theme-variables.scss
+++ b/source/stylesheets/turtlecoin/_theme-variables.scss
@@ -15,8 +15,8 @@ $purple-10: #8E7CC3;
 ////////////////////
 $nav-bg: $white;
 $examples-bg: $gray-20;
-$code-bg: $gray-10;
-$code-annotation-bg: darken($gray-10, 3%);
+$code-bg: transparent;
+$code-annotation-bg: $gray-20;
 $nav-subitem-bg: $white;
 $nav-active-bg: $green-20;
 $nav-active-parent-bg: $white;
